Added platforms and license keywords

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = read-ad
-version = 0.7.0
+version = 0.7.1
 description = COM-based readonly access for Active Directory in Python 3
 author = Rainer Schwarzbach
 author_email = rainer@blackstream.de
@@ -10,12 +10,15 @@ project_urls =
     Tracker = https://github.com/blackstream-x/python/issues
 long_description = file: README.md
 long_description_content_type = text/markdown
+license = MIT
 license_files = LICENSE
+platforms = win32
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
     Topic :: Software Development :: Libraries
     License :: OSI Approved :: MIT License
+    Operating System :: Microsoft :: Windows
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
