--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = read-ad
-version = 0.9.0
+version = 1.0.0
 description = COM-based readonly access for Active Directory in Python 3
 author = Rainer Schwarzbach
 author_email = rainer@blackstream.de
@@ -14,7 +14,7 @@ license = MIT
 license_files = LICENSE
 platforms = win32
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     Topic :: Software Development :: Libraries
     License :: OSI Approved :: MIT License
